// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Theme context <Consumer /> the consumer values are correct 1`] = `
Object {
  "key": "iohk-dark",
  "setTheme": [Function],
  "theme": Object {
    "colors": Object {
      "primary": "tomato",
      "secondary": "papayawhip",
    },
    "typography": Object {
      "fontFamily": "Arial",
    },
  },
  "themes": Array [
    Object {
      "config": Object {
        "colors": Object {
          "primary": "tomato",
          "secondary": "papayawhip",
        },
        "typography": Object {
          "fontFamily": "Arial",
        },
      },
      "key": "iohk-dark",
    },
    Object {
      "config": Object {
        "colors": Object {
          "primary": "thistle",
          "secondary": "dodgerblue",
        },
        "typography": Object {
          "fontFamily": "Helvetica",
        },
      },
      "key": "iohk-light",
    },
  ],
}
`;

exports[`Theme context <Consumer /> when setTheme is called the consumer values are correctly updated 1`] = `
Object {
  "key": "iohk-dark",
  "setTheme": [Function],
  "theme": Object {
    "colors": Object {
      "primary": "tomato",
      "secondary": "papayawhip",
    },
    "typography": Object {
      "fontFamily": "Arial",
    },
  },
  "themes": Array [
    Object {
      "config": Object {
        "colors": Object {
          "primary": "tomato",
          "secondary": "papayawhip",
        },
        "typography": Object {
          "fontFamily": "Arial",
        },
      },
      "key": "iohk-dark",
    },
    Object {
      "config": Object {
        "colors": Object {
          "primary": "thistle",
          "secondary": "dodgerblue",
        },
        "typography": Object {
          "fontFamily": "Helvetica",
        },
      },
      "key": "iohk-light",
    },
  ],
}
`;

exports[`Theme context <Consumer /> when the theme is transformed it renders with the transformed theme 1`] = `
<Provider
  themes={
    Array [
      Object {
        "config": Object {
          "colors": Object {
            "primary": "tomato",
            "secondary": "papayawhip",
          },
          "typography": Object {
            "fontFamily": "Arial",
          },
        },
        "key": "iohk-dark",
      },
      Object {
        "config": Object {
          "colors": Object {
            "primary": "thistle",
            "secondary": "dodgerblue",
          },
          "typography": Object {
            "fontFamily": "Helvetica",
          },
        },
        "key": "iohk-light",
      },
    ]
  }
  transformTheme={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "config": Object {
              "colors": Object {
                "primary": "tomato",
                "secondary": "papayawhip",
              },
              "typography": Object {
                "fontFamily": "Arial",
              },
            },
            "key": "iohk-dark",
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": Object {
            "colors": Object {
              "primary": "black",
              "secondary": "papayawhip",
            },
            "typography": Object {
              "fontFamily": "Arial",
            },
          },
        },
      ],
    }
  }
>
  <div
    consumervalue={
      Object {
        "key": "iohk-dark",
        "setTheme": [Function],
        "theme": Object {
          "colors": Object {
            "primary": "black",
            "secondary": "papayawhip",
          },
          "typography": Object {
            "fontFamily": "Arial",
          },
        },
        "themes": Array [
          Object {
            "config": Object {
              "colors": Object {
                "primary": "tomato",
                "secondary": "papayawhip",
              },
              "typography": Object {
                "fontFamily": "Arial",
              },
            },
            "key": "iohk-dark",
          },
          Object {
            "config": Object {
              "colors": Object {
                "primary": "thistle",
                "secondary": "dodgerblue",
              },
              "typography": Object {
                "fontFamily": "Helvetica",
              },
            },
            "key": "iohk-light",
          },
        ],
      }
    }
    id="consumer-value-holder"
  />
</Provider>
`;

exports[`Theme context <Provider /> it renders the provider component correctly 1`] = `
<ContextProvider
  value={
    Object {
      "key": "iohk-dark",
      "originalTheme": Object {
        "config": Object {
          "colors": Object {
            "primary": "tomato",
            "secondary": "papayawhip",
          },
          "typography": Object {
            "fontFamily": "Arial",
          },
        },
        "key": "iohk-dark",
      },
      "setTheme": [Function],
      "theme": Object {
        "colors": Object {
          "primary": "tomato",
          "secondary": "papayawhip",
        },
        "typography": Object {
          "fontFamily": "Arial",
        },
      },
      "themes": Array [
        Object {
          "config": Object {
            "colors": Object {
              "primary": "tomato",
              "secondary": "papayawhip",
            },
            "typography": Object {
              "fontFamily": "Arial",
            },
          },
          "key": "iohk-dark",
        },
        Object {
          "config": Object {
            "colors": Object {
              "primary": "thistle",
              "secondary": "dodgerblue",
            },
            "typography": Object {
              "fontFamily": "Helvetica",
            },
          },
          "key": "iohk-light",
        },
      ],
    }
  }
>
  <p>
    Theme provider children
  </p>
</ContextProvider>
`;
